option('SHA3',
  type: 'combo',
  choices: ['auto', 'opt64', 'plain32', 'avx2', 'armv8a-neon', 's390-cpacf'],
  value: 'auto',
  description: 'Select SHA3 implementation'
)
option('EM-128',
  type: 'feature',
  value: 'enabled',
  description: 'Enable EM-128 variants (not implemented)'
)
option('EM-192',
  type: 'feature',
  value: 'disabled',
  description: 'Enable EM-192 variants (not implemented)'
)
option('EM-256',
  type: 'feature',
  value: 'disabled',
  description: 'Enable EM-256 variants (not implemented)'
)
option('valgrind',
  type: 'feature',
  value: 'disabled',
  description: 'Use valgrind for timing checks'
)